[project]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "\"petarSuki\" \"petartuni@gmail.com\""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
